added lost of functionality and style

--- a/Main.html
+++ b/Main.html
@@ -1,6 +1,23 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <link rel="stylesheet" href="style.css" />
     <title>Tyler Website</title>
   </head>
+  <body>
+    <p>Tyler is the BEST!!!</p>
+    <img src="Tyler_David.jpeg" alt="TylerAndDad" width="500" />
+    <p>Want to learn more about me?</p>
+    <a href="Schooling.html">Schooling</a>
+    <a href="tutorial.html">Projects</a>
+    <p>
+      Lorem ipsum dolor sit, amet consectetur adipisicing elit. Magni cupiditate
+      aliquam vitae est atque eligendi magnam quis architecto in illo
+      consequuntur repellendus voluptas necessitatibus, dolorum similique, at
+      iste dolores. Pariatur.
+    </p>
+    <h1></h1>
+    <p id="myp"></p>
+    <script src="index.js"></script>
+  </body>
 </html>
