added new images and an interests file

--- a/Main.html
+++ b/Main.html
@@ -10,6 +10,7 @@
     <p>Want to learn more about me?</p>
     <a href="Schooling.html">Schooling</a>
     <a href="tutorial.html">Projects</a>
+    <a href="Interests.html">Interests</a>
     <p>
       Lorem ipsum dolor sit, amet consectetur adipisicing elit. Magni cupiditate
       aliquam vitae est atque eligendi magnam quis architecto in illo
