--- a/Schooling.html
+++ b/Schooling.html
@@ -6,5 +6,7 @@
   </head>
   <body>
     <h1>I currently go to Gilbert Christian High School</h1>
+    <a href="Interests.html"><img src="GCHS.jpg" width="500" /><br /></a>
+    <img src="GCHSLogo.png" width="200" />
   </body>
 </html>
