made a counter program, also made each program a div, and a table of contents

--- a/Main.html
+++ b/Main.html
@@ -9,7 +9,7 @@
     <img src="Tyler_David.jpeg" alt="TylerAndDad" width="500" />
     <p>Want to learn more about me?</p>
     <a href="Schooling.html">Schooling</a>
-    <a href="tutorial.html">Projects</a>
+    <a href="Projects.html">Projects</a>
     <a href="Interests.html">Interests</a>
     <p>
       Lorem ipsum dolor sit, amet consectetur adipisicing elit. Magni cupiditate
