--- a/Interests.html
+++ b/Interests.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
+    <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">great video</a>
     <script src="index.js"></script>
   </body>
 </html>
