linked linkedin page

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <p>Tyler is the BEST!!!</p>
     <img src="Tyler_David.jpeg" alt="TylerAndDad" width="500" />
     <p>Want to learn more about me?</p>
+    <a href="https://www.linkedin.com/in/tyler-jordan2/">LinkedIn</a>
     <a href="Schooling.html">Schooling</a>
     <a href="Projects.html">Projects</a>
     <a href="Interests.html">Interests</a>
