got wordle to work

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <a href="Schooling.html">Schooling</a>
     <a href="Projects.html">Projects</a>
     <a href="Interests.html">Interests</a>
+    <a href="Wordle.html">Wordle</a>
     <p>
       Lorem ipsum dolor sit, amet consectetur adipisicing elit. Magni cupiditate
       aliquam vitae est atque eligendi magnam quis architecto in illo
